--- a/orderFoodAPI/src/main/resources/application.properties
+++ b/orderFoodAPI/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.password=thudan19
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 
 #spring.profiles.active=prod
