--- a/orderFoodAPI/src/main/resources/application.properties
+++ b/orderFoodAPI/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/orderfood
 spring.datasource.username=root
-spring.datasource.password=thudan19
+spring.datasource.password=!@#$%^&*()
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 
 #spring.profiles.active=prod
