--- a/orderFoodAPI/src/main/resources/application.properties
+++ b/orderFoodAPI/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/orderfood
 spring.datasource.username=root
-spring.datasource.password=thudan19
+spring.datasource.password=quan123456
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
